--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,61 +1,42 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "standard-with-typescript",
-        "plugin:react/recommended"
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "parser": "@typescript-eslint/parser",
-        "project": "./tsconfig.json",
-        "tsconfigRootDir": "./"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-        "react/react-in-jsx-scope": "off",
-        "react/prop-types": "off",
-        "@typescript-eslint/explicit-function-return-type": "off",
-        "@typescript-eslint/indent": [
-            "error",
-            4
-        ],
-        "indent": [
-          "error",
-          4,
-          {
-              "SwitchCase": 1
-          }
-      ],
-      "import/order": [
-          "error",
-          {
-              "groups": [
-                  [
-                      "builtin",
-                      "external"
-                  ],
-                  "internal",
-                  "parent",
-                  [
-                      "sibling",
-                      "index"
-                  ]
-              ],
-              "newlines-between": "always",
-              "alphabetize": {
-                  "order": "asc",
-                  "caseInsensitive": true
-              }
-          }
-      ]
-    }
-  }
+	"env": {
+		"browser": true,
+		"es2021": true
+	},
+	"extends": ["standard-with-typescript", "plugin:react/recommended"],
+	"parserOptions": {
+		"ecmaVersion": "latest",
+		"sourceType": "module",
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"parser": "@typescript-eslint/parser",
+		"project": "./tsconfig.json",
+		"tsconfigRootDir": "./"
+	},
+	"plugins": ["react"],
+	"rules": {
+		"react/react-in-jsx-scope": "off",
+		"react/prop-types": "off",
+		"@typescript-eslint/explicit-function-return-type": "off",
+		"@typescript-eslint/indent": "off",
+		"indent": "off",
+		"no-tabs": "off",
+		"import/order": [
+			"error",
+			{
+				"groups": [
+					["builtin", "external"],
+					"internal",
+					"parent",
+					["sibling", "index"]
+				],
+				"newlines-between": "always",
+				"alphabetize": {
+					"order": "asc",
+					"caseInsensitive": true
+				}
+			}
+		]
+	}
+}
